# Vibes

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  build.rs  index.html  index.scss
.github/workflows/: pr_check.yml
audio_worker/: Cargo.toml
audio_worker/src/: bridge.rs  lib.rs  log.rs  rand.rs  synth.rs  waves.rs
src/: app.rs  bridge.rs  handle.rs  log.rs  main.rs  midi.rs  processor-bridge.js  processor_bridge.rs  synth.rs  sytrus.rs  waves.rs
src/audio/: manager.rs  master.rs  midi.rs  mod.rs
static/: rust_audio_processor.js  text_decoder.js  worker.js
