[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]
build="build.rs"
path = "src/main.rs"

[dependencies.web-sys]
version = "0.3"
features = [
    "AudioContext",
    "AudioNode",
    "AudioParam",
    "OscillatorNode",
    "OscillatorType",
    "GainNode",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioWorkletNodeOptions",
    "console",
    "MessageEvent",
    "MessagePort",
    "Headers",
    "ReadableStream",
    "Request",
    "TextDecoder",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo = "0.8.0"
log = "0.4.17"
midir = "0.9.1"
rodio = "0.17.1"
wasm-bindgen = { version="0.2.84", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
yew = { version="0.20", features=["csr"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
js-sys = "0.3.61"
serde = "1.0.162"
serde_derive = "1.0.162"
serde-wasm-bindgen = "0.5.0"

console_error_panic_hook = "0.1.6"
futures-util = "0.3.28"
