[package]
name = "audio_worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.62"
wasm-bindgen = "0.2"
web-sys = { version= "0.3.62", features=["MessageEvent", "console"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
serde = "1.0.162"
serde_derive = "1.0.162"
serde-wasm-bindgen = "0.5.0"

[lib]
crate-type = ["cdylib"]
