[package]
name = "audio_worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.62"
web-sys = { version= "0.3.62", features=["console"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"

[lib]
crate-type = ["cdylib"]
